Prevent drop target for deleting from collapsing.

--- a/src/features/hierarchy-selector/AvailableFieldList.module.css
+++ b/src/features/hierarchy-selector/AvailableFieldList.module.css
@@ -1,5 +1,6 @@
 .listContainer {
   position: relative;
+  min-height: 2rem;
 }
 
 .draggableContainer {
